dhall/tests/type-errors/unit/RecordProjectionEmpty.txt
Type error: error: ProjectionMissingEntry
 --> <current file>:1:0
  |
1 | {=}.{ x }
  | ^^^^^^^^^ ProjectionMissingEntry
  |
